# python-backend-example-cookiecutter

./: README.md
{{cookiecutter.__project_kebab}}/: .env  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml  {{cookiecutter.__gitignore}}
{{cookiecutter.__project_kebab}}/.deploy/docker/: Dockerfile  logging-config.yaml  webserver.sh
{{cookiecutter.__project_kebab}}/.deploy/helm/app/: values.yaml
{{cookiecutter.__project_kebab}}/.deploy/helm/app/templates/: NOTES.txt  _envs.tpl  _helpers.tpl  _tplvalues.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
{{cookiecutter.__project_kebab}}/.deploy/helm/values/: dev.yaml  prod.yaml
{{cookiecutter.__project_kebab}}/tests/: conftest.py  test_app.py
{{cookiecutter.__project_kebab}}/{{cookiecutter.__project_slug}}/: cli.py  conftest.py  hello.py  main.py  slog.py  slog_test.py  tracking.py  tracking_test.py
{{cookiecutter.__project_kebab}}/{{cookiecutter.__project_slug}}/api/: api.py  spec.py
