[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "{{cookiecutter.__project_kebab}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [{ name = "{{cookiecutter.author_full_name}} <{{cookiecutter.author_email}}>" }]
requires-python = ">=3.14,<4.0"


dependencies = [
    # Server deps
    "fastapi>=0.115.2,<1",
    "pydantic>=2.9.2,<3",
    "pyyaml>=6.0.2,<7",
    "sentry-sdk>=2.17.0,<3",
    "starlette-exporter>=0.23.0,<1",
    "typer>=0.12.5,<1",
    "uvicorn>=0.32.0,<1",
    "uvloop>=0.21.0,<1",
]


[project.scripts]
{{cookiecutter.__project_kebab}} = "{{cookiecutter.__project_slug}}.cli:app"


[dependency-groups]
test = [
    "coverage>=7.13.5",
    "httpx>=0.27.2,<0.28",
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.1.0,<8",
]
lint = [
    "black>=26.3.1",
    "pre-commit>=4.5.1",
    "pylint>=4.0.5,<5",
    "pyright>=1.1.408,<2",
]


[[tool.uv.index]]
name = "distribusion"
url = "https://gitlab.com/api/v4/groups/15793598/-/packages/pypi/simple"
explicit = true


[tool.isort]
profile = "black"


[tool.pylint.messages_control]
disable = "C0115, R0903, C0116, R1734, R1735, E0401, E0611, R0913, R0902"


[tool.pylint.format]
max-line-length = "88"


[tool.black]
include = "{{cookiecutter.__project_slug}}"


# At the moment, this might break the CI
# + In general, pyright and env are to be configured by user
# [tool.pyright]
# include = ["{{cookiecutter.__project_slug}}"]
# venvPath = "."
# venv = ".venv"


[tool.coverage.run]
source = ["{{cookiecutter.__project_slug}}"]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "module"
